# yast-slepos-image-builder

./: RPMNAME  yast2-slepos-image-builder.spec.in
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-slepos-image-builder.changes
src/: Makefile.am  SleposImageBuilder.ycp  SleposImageBuilderXml.pm  complex.ycp  dialogs.ycp  helps.ycp  routines.ycp  slepos-image-builder.desktop  slepos-image-builder.ycp  slepos-image-builder_auto.ycp  slepos-image-builder_proposal.ycp  subdialogs.ycp  subwizards.ycp  uifunctions.ycp  wizards.ycp
testsuite/tests.old/: Read.out  Read.ycp  deleteImageDescrTree.out  deleteImageDescrTree.ycp  duplicateImageDescrTree.out  duplicateImageDescrTree.ycp
